--- a/grafana-mysql/docker-compose.yml
+++ b/grafana-mysql/docker-compose.yml
@@ -1,34 +1,38 @@
-version: '2'
+version: '3.7'
 
 services:
-mysql:
-  image : mysql:5.7
-  ports:
-    - "3306:3306"
-  volumes:
-    - ~/db/mysql:/var/lib/mysql
-    - ./init-dump:/docker-entrypoint-initdb.d
-  environment:
-    TERM: xterm
-    APP_ENV: dev
-    MYSQL_USER: usuario
-    MYSQL_PASSWORD: usuario123
-    MYSQL_DATABASE: proyecto
-    MYSQL_ROOT_PASSWORD: root
-  container_name: mysql
 
   grafana:
-    image: grafana/grafana:7.3.7     
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    links:
-      - mysql
+    image: grafana/grafana
+    container_name: grafana_LRE
+    networks:
+      - web
     volumes:
-      - ./data_grafana:/var/lib/grafana
+      - data_grafana:/var/lib/grafana
+    ports:
+      - 3000:3000
+
+  mysql:
+    image: mysql:8
+    container_name: mysql_grafana
+    networks:
+      - web
+    command: --init-file /data/application/init.sql
+    volumes:
+      - ./init.sql:/data/application/init.sql
+      - mysql_grafana:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_USER=clem
+      - MYSQL_PASSWORD=test
+      - MYSQL_DATABASE=testGrafana
+    ports:
+      - 3307:3306
 
 volumes:
+  mysql_grafana:
   data_grafana:
- 
 
-  
+networks:
+  web:
+    driver: bridge
