--- a/grafana-mysql/docker-compose.yml
+++ b/grafana-mysql/docker-compose.yml
@@ -4,9 +4,12 @@ services:
 
   grafana:
     image: grafana/grafana
-    container_name: grafana_LRE
-    networks:
-      - web
+    container_name: grafana
+    restart: always
+    depends_on:
+      - mysql
+    links:
+      - mysql
     volumes:
       - data_grafana:/var/lib/grafana
     ports:
@@ -15,24 +18,18 @@ services:
   mysql:
     image: mysql:8
     container_name: mysql_grafana
-    networks:
-      - web
     command: --init-file /data/application/proyecto.sql
     volumes:
       - ./proyecto.sql:/data/application/proyecto.sql
       - mysql_grafana:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=secret
-      - MYSQL_USER=clem
-      - MYSQL_PASSWORD=test
-      - MYSQL_DATABASE=testGrafana
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=admin
+      - MYSQL_DATABASE=prueba
     ports:
-      - 3307:3306
+      - 3306:3306
 
 volumes:
   mysql_grafana:
   data_grafana:
-
-networks:
-  web:
-    driver: bridge
