--- a/grafana-mysql/docker-compose.yml
+++ b/grafana-mysql/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - data_grafana:/var/lib/grafana
     environment:
       - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=secret
       - GF_INSTALL_PLUGINS= 
     ports:
       - 3000:3000
@@ -29,7 +29,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_USER=admin
-      - MYSQL_PASSWORD=admin
+      - MYSQL_PASSWORD=secret
       - MYSQL_DATABASE=prueba
     ports:
       - 3306:3306
