--- a/grafana-mysql/docker-compose.yml
+++ b/grafana-mysql/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - web
     volumes:
-      - data_grafana:/var/lib/grafana
+      - ./grafana/:/var/lib/grafana
     ports:
       - 3000:3000
 
