--- a/grafana-mysql/docker-compose.yml
+++ b/grafana-mysql/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - web
     volumes:
       - data_grafana:/var/lib/grafana
+      - ./h2olock.json:/data/application/h2olock.json
     ports:
       - 3000:3000
 
