--- a/grafana-mysql/docker-compose.yml
+++ b/grafana-mysql/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - web
     volumes:
-      - data_grafana:/var/lib/grafana
+      - ./public/:/var/lib/grafana
     ports:
       - 3000:3000
 
@@ -25,13 +25,12 @@ services:
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_USER=laura
       - MYSQL_PASSWORD=test
-      - MYSQL_DATABASE=testGrafana
+      - MYSQL_DATABASE=h2olock
     ports:
       - 3307:3306
 
 volumes:
   mysql_grafana:
-  data_grafana:
 
 networks:
   web:
